--- a/tex/ilmari_references.bib
+++ b/tex/ilmari_references.bib
@@ -242,3 +242,21 @@ keywords = {Power resources},
 language = {eng},
 publisher = {Elsevier Science & Technology},
 }
+
+@misc{mittariAsetus,
+title = {Valtioneuvoston asetus sähköntoimitusten selvityksestä ja mittauksesta},
+number = {5.2.2009/66}
+}
+
+@misc{enwg,
+title = { EnWG §14a Steuerbare Verbrauchseinrichtungen in Niederspannung; Verordnungsermächtigung},
+url = {https://www.gesetze-im-internet.de/enwg_2005/__14a.html},
+urldate = {2020-08-20}
+}
+
+@techreport{VDEARN4100,
+institution = {Forum Netztechnik/Netzbetrieb im VDE},
+title={VDE-AR-N 4100 Anwendungsregel:2019-04},
+url={https://www.vde.com/en/fnn/topics/technical-connection-rules/technical-connection-rules-for-low-voltage},
+type = {Standard}
+}
