--- a/tex/sidosryhmat.tex
+++ b/tex/sidosryhmat.tex
@@ -10,7 +10,9 @@ Luonnollisesti eri sidosryhmät ovat kiinnostuneet erilaisiin käyttötarkoituks
     \item häiriötilanteissa järjestelmän hallinta
   \end{itemize}
 
-  Yksi lämpöpumppujen rajapintoja hyödyntävistä sidosryhmistä voi olla verkonhaltija eli Suomessa käytännössä sähköverkkoyhtiö. Lämpöpumput ovat todennäköisesti verkkoliityntänsä suurimpia kuormia, jonka takia niiden käyttämän sähkön hintaan kohdistuu paineita. Saksalaisessa EVU-Sparre-järjestelmässä lämpöpumppu on sähköntoimittajan ohjattavissa. Ohjaussopimuksesta vuoksi kuluttajan saama siirto-/energiahinnanalennus koskee ainoastaan lämpöpumpun käyttämää sähköä. Tämä tarkoittaa, että älykäs energiamittari, jonka kautta myös lämpöpumpun ohjaaminen tapahtuu, mittaa erikseen lämpöpumpun käyttämän energian.
+  Yksi lämpöpumppujen rajapintoihin liittyvistä sidosryhmistä on sähköverkonhaltija eli Suomessa käytännössä sähköverkkoyhtiö. Vuodesta 2009 on Suomessa laki velvoittanut sähköverkkoyhtiöitä asentamaan sähkönkäyttöpaikoille eli sähköä ostavan asiakkaan verkkoliityntään tuntimittauslaitteiston. Asetus myös asettaa vaatimuksia käytetyllä tuntimittauslaittestolle muunmuassa etäluettavuudesta ja -ohjattavuudesta.\parencite{mittariAsetus} Tuntimittauslaitteistosta käytetään usein termiä älymittari tai AMR-mittari. Termi AMR:n viitatessa lähinnä mittarin automaattiseen luentaan, saattaisi parempi nimitys olla AMI-mittari. Lyhenne AMR tarkoittaa mittareiden muodostamaa järjestelmää, jossa tieto liikkuu myös kohti mittareita ja niiden takana olevia kotitalouksia.\parencite{dictOfEnergy}
+
+  Lämpöpumput ovat todennäköisesti verkkoliityntänsä suurimpia kuormia, jonka takia niiden käyttämän sähkön hintaan kohdistuu paineita. Saksalaisessa EVU-Sparre-järjestelmässä lämpöpumppu on sähköntoimittajan ohjattavissa. Kuluttajan saama poiskytkennästä johtuva energiahinnanalennus koskee ainoastaan lämpöpumpun käyttämää sähköä. Tämä tarkoittaa, että älykäs energiamittari, jonka kautta myös lämpöpumpun ohjaaminen tapahtuu, mittaa erikseen lämpöpumpun käyttämän energian.\parencite{enwg, VDEARN4100}
 
 \section{Järjestelmän omistaja}
   \begin{itemize}
