pari jutskaa muutin vaan

--- a/tex/rajapinnat.tex
+++ b/tex/rajapinnat.tex
@@ -122,16 +122,16 @@
     Modbus TCP/IP:tä käytettäessä Modbus-liikenne voi kulkea normaalin Internet-liikenteen mukana, mikä tekee siitä huomattavan joustavan ratkaisun. TCP-portti 502 on varattu Modbus-sovelluksille.\parencite{modbusTCPIPSpec} Koska ADU:t lähetetään TCP-kehyksessä, niihin ei tarvitse laskea eikä lisätä tarkistussummaa. TCP-protokolla huolehtii paketin (kehys + ADU) perille pääsystä ja mahdollisista uudelleenlähetyksistä. Tietosuojasta voidaan huolehtia käyttämällä kommunikointiin \gls{VPN}-yhteyttä. Toinen turvallisuutta parantava keino on käyttää komminikointiin MODBUS/TCP Security -standardin mukaista TLS-salausta, jolloin liikenne kohdistetaan TCP-porttiin 802\parencite{modbusTCPIPTLSSpec}.
 
 \section{SunSpec Modbus}
-  SunSpec Modbus on SunSpec Alliancen määrittelemä sovellustason toteutus, joka hyödyntää yleisesti käytössä olevaa Modbus-protokollaa.  Fyysinen Modbus-rajapinta on sisäänrakennettu noin 80\%:iin asennetuista hajautetun energiantuotannon laitteista, joten tämän toteutuksen tuominen suurelle määrälle laitteita on melko yksinkertaista \parencite{SSFactSheet}.
+  SunSpec Modbus on SunSpec Alliancen määrittelemä sovellustason toteutus, joka hyödyntää yleisesti käytössä olevaa Modbus-protokollaa. Fyysinen Modbus-rajapinta on sisäänrakennettu noin \SI{80}{\percent}:iin asennetuista hajautetun energiantuotannon laitteista, joten tämän toteutuksen tuominen suurelle määrälle laitteita on melko yksinkertaista \parencite{SSFactSheet}.
 
-  SunSpecin standardi on tehty huomioiden IEC 61850-standardi, mukaan lukien sen 90-7 ja 7-420 -laajennukset, jotka käsittelevät hajautetun energiantuotannon inverttereiden ja konverttereiden toiminnallisuuksia ja kommunikaatiorakennetta hajautetussa energiantuotannossa. Tämän tarkoituksena on helpottaa integraatiota IEC 61850 -standardia hyödyntävien järjestelmien kanssa \parencite{SSTech}. Kuitenkaan SunSpec ei ole nimennyt tietomallin muuttujia täsmälleen samoilla nimillä, kuin 61850-standardi, joten ne eivät ole suoraan yhteensopivia keskenään.
+  SunSpecin standardi on tehty huomioiden \gls{IEC} 61850 -standardi, mukaan lukien sen 90-7 ja 7-420 -laajennukset, jotka käsittelevät hajautetun energiantuotannon inverttereiden ja konverttereiden toiminnallisuuksia ja kommunikaatiorakennetta hajautetussa energiantuotannossa. Tämän tarkoituksena on helpottaa integraatiota \gls{IEC} 61850 -standardia hyödyntävien järjestelmien kanssa \parencite{SSTech}. Kuitenkaan SunSpec ei ole nimennyt tietomallin muuttujia täsmälleen samoilla nimillä, kuin 61850-standardi, joten ne eivät ole suoraan yhteensopivia keskenään.
 
-  SunSpecin toteutuksessa on määritelty CIM (yleinen tietomalli), jonka avulla eri valmistajien laitteita voidaan yhdistää samaan järjestelmään. CIM mahdollistaa laiteriippumattomuuden, sillä siinä on määritelty funktioiden toiminta ja niiden käyttö. Tällöin eri valmistajien laitteita voidaan lukea ja ohjata samoilla käskyillä järjestelmän sisällä.
+  SunSpecin toteutuksessa on määritelty \gls{CIM} (yleinen tietomalli), jonka avulla eri valmistajien laitteita voidaan yhdistää samaan järjestelmään. \gls{CIM} mahdollistaa laiteriippumattomuuden, sillä siinä on määritelty funktioiden toiminta ja niiden käyttö. Tällöin eri valmistajien laitteita voidaan lukea ja ohjata samoilla käskyillä järjestelmän sisällä.
 
-  SunSpec Modbusin määrittelemä CIM on käytössä myös muilla protokollilla, kuten HTTP/XML:lla ja OPC:lla. Koska lähes kaikki tieto SunSpecin standardista perustuu Modbus-protokollaan, muiden tiedonsiirtoprotokollien tarkastelu jätettiin pois. Tiedon puute johtuu mitä luultavimmin Modbusin suuresta suosiosta.
+  SunSpec Modbusin määrittelemä \gls{CIM} on käytössä myös muilla protokollilla, kuten \gls{HTTP}/\gls{XML}:lla ja \gls{OPC}:lla. Koska lähes kaikki tieto SunSpecin standardista perustuu Modbus-protokollaan, muiden tiedonsiirtoprotokollien tarkastelu jätettiin pois. Tiedon puute johtuu mitä luultavimmin Modbusin suuresta suosiosta.
 
 \section{IEC 61850}
-  IEC 61850 on sähköaseman älykkäiden sähkölaitteiden kommunikaatioprotokollia määrittävä standardi. Se on laajasti käytössä sähköasemien tiedonvaihdossa ja sähkönjakelun automaatiossa. Sen laajennukset tähtäävät kuitenkin myös laajempaan käyttöön, sillä standardissa on määritelty myös esimerkiksi hajautetun energiantuotannon ja sähköisen liikkumisen tietomalleja. Edellä mainitun SunSpecin CIM on tehty 61850-90-7 -dokumentin pohjalta, ja se toteuttaakin suuren osan IEC standardin määrittelemistä inverttereiden toiminnallisuuksista. Näitä toiminnallisuuksia ovat esimerkiksi:
+  \gls{IEC} 61850 on sähköaseman älykkäiden sähkölaitteiden kommunikaatioprotokollia määrittävä standardi. Se on laajasti käytössä sähköasemien tiedonvaihdossa ja sähkönjakelun automaatiossa. Sen laajennukset tähtäävät kuitenkin myös laajempaan käyttöön, sillä standardissa on määritelty myös esimerkiksi hajautetun energiantuotannon ja sähköisen liikkumisen tietomalleja. Edellä mainitun SunSpecin CIM on tehty 61850-90-7 -dokumentin pohjalta, ja se toteuttaakin suuren osan IEC standardin määrittelemistä inverttereiden toiminnallisuuksista. Näitä toiminnallisuuksia ovat esimerkiksi:
   \begin{itemize}
     \item Välittömät ohjaustoiminnot, esimerkiksi alasajo- ja käynnistyskomennot
     \item Loistehonsäädön (Volt/VAR-säätö) tilan muuttaminen
@@ -143,12 +143,12 @@
     \item Ajastetut komennot
   \end{itemize}
 
-  Vaikka IEC 61850 ei ole vielä laajasti käytössä inverttereissä, esimerkiksi SMA tarjoaa Italiassa toimiville inverttereille rajapinnan standardille. Tällä voidaan irrottaa tai kytkeä invertteri verkkoon, tai muuttaa invertterin taajuusrajoja. Italian CEI 0-21 -standardissa vaaditaan inverttereille rajapinta verkonhaltijalle, jonka takia luultavasti tämä ominaisuus on SMA:n ohjekirjassa merkattu vain Italia -ominaisuudeksi. Tämän vaatimuksen lähde tosin ei kertonut omaa lähdettään, joten tätä vaatimusta ei voitu vahvistaa varmaksi, tosin SMA:n erillinen ohjeistus Italialle viittaa siihen. (http://blog.nettedautomation.com/2012/07/iec-61850-in-italy-sma-offers-iec-61850.html)
+  Vaikka IEC 61850 ei ole vielä laajasti käytössä inverttereissä, esimerkiksi SMA\footnote{SMA Solar Technology AG -- System-, Mess- und Anlagentechnik} tarjoaa Italiassa toimiville inverttereille rajapinnan standardille. Tällä voidaan irrottaa tai kytkeä invertteri verkkoon, tai muuttaa invertterin taajuusrajoja. Italian CEI 0-21 -standardissa vaaditaan inverttereille rajapinta verkonhaltijalle, jonka takia luultavasti tämä ominaisuus on SMA:n ohjekirjassa merkattu vain Italia -ominaisuudeksi. Tämän vaatimuksen\footnote{\url{http://blog.nettedautomation.com/2012/07/iec-61850-in-italy-sma-offers-iec-61850.html}} lähde tosin ei kertonut omaa lähdettään, joten tätä vaatimusta ei voitu vahvistaa varmaksi, tosin SMA:n erillinen ohjeistus Italialle viittaa siihen.
 
 \section{IEEE 1815 / Distributed Network Protocol 3}
-  DNP3 on teollisuusautomaation kommunikaatioprotokolla, joka määriteltiin alunperin 1993 ja sen kehitys jatkuu edelleen. Vuonna 2008 yhdysvaltalainen valtionvirasto NIST ja voittoa tavoittelematon energia-alan järjestö EPRI näkivät tarpeen rajapinnalle IEC 61850:n ja DNP3:n välille. Koska DNP3 oli vain vakiintunut käytäntö, DNP3:n standardisointi oli tarpeen, jotta yhteistyö ja koordinointi IEC:n kanssa olisi sujuvaa. DNP3 standardoitiinkin IEEE 1815 -standardiksi vuonna 2010, jonka jälkeen siitä on käytetty tuota nimitystä. 
-  
-  DNP3 on yleisesti käytössä sähkö- ja vesiteollisuudessa, mutta muilla teollisuudenaloilla tämän käyttö ei ole yleistä, vaikkakin täysin mahdollista. Pohjois-Amerikassa DNP3 on käytössä sähköverkon SCADA-järjestelmissä, ja se onkin osittain kilpaileva tekniikka IEC 61850:n kanssa. 
+  DNP3 on teollisuusautomaation kommunikaatioprotokolla, joka määriteltiin alunperin 1993 ja sen kehitys jatkuu edelleen. Vuonna 2008 yhdysvaltalainen valtionvirasto NIST ja voittoa tavoittelematon energia-alan järjestö \gls{EPRI} näkivät tarpeen rajapinnalle \gls{IEC} 61850:n ja DNP3:n välille. Koska DNP3 oli vain vakiintunut käytäntö, DNP3:n standardisointi oli tarpeen, jotta yhteistyö ja koordinointi \gls{IEC}:n kanssa olisi sujuvaa. DNP3 standardoitiinkin \gls{IEEE} 1815 -standardiksi vuonna 2010, jonka jälkeen siitä on käytetty tuota nimitystä.
+
+  DNP3 on yleisesti käytössä sähkö- ja vesiteollisuudessa, mutta muilla teollisuudenaloilla tämän käyttö ei ole yleistä, vaikkakin täysin mahdollista. Pohjois-Amerikassa DNP3 on käytössä sähköverkon \gls{SCADA}-järjestelmissä, ja se onkin osittain kilpaileva tekniikka IEC 61850:n kanssa.
 
   IEEE 1815.1 -dokumentti määrittelee standardisoidun tavan linkittää yhteen data tämän ja IEC-standardin välillä. Tämä mahdollistaa IEC 61850-standardia käyttävien laitteiden lisäyksen IEEE 1815-protokollaiseen järjestelmään. Tämän on Pohjois-Amerikassa tärkeää, sillä siellä on laajasti käytössä IEEE 1815 standardi, mutta koska IEC 61850 on uudempi, sen osuus tulee lisääntymään laitteissa.
 
