--- a/tex/sanasto.tex
+++ b/tex/sanasto.tex
@@ -67,3 +67,43 @@
   name={V2G},
   description={vehicle-to-grid}
 }
+
+\newglossaryentry{IEC}{
+  name={IEC},
+  description={International Electrotechnical Commission}
+}
+
+\newglossaryentry{CIM}{
+  name={CIM},
+  description={Common Information Model}
+}
+
+\newglossaryentry{HTTP}{
+  name={HTTP},
+  description={Hypertext Transfer Protocol}
+}
+
+\newglossaryentry{XML}{
+  name={XML},
+  description={Extensible Markup Language}
+}
+
+\newglossaryentry{OPC}{
+  name={OPC},
+  description={Open Platform Communications}
+}
+
+\newglossaryentry{IEEE}{
+  name={IEEE},
+  description={Institute of Electrical and Electronics Engineers}
+}
+
+\newglossaryentry{EPRI}{
+  name={EPRI},
+  description={Electric Power Research Institute}
+}
+
+\newglossaryentry{SCADA}{
+  name={SCADA},
+  description={Supervisory control and data acquisition}
+}
