--- a/main.tex
+++ b/main.tex
@@ -149,17 +149,10 @@
 \glossary
 
 \mainmatter
-% \chapter*{Huomioita}
-% \label{alkusanat}
-% \input{tex/alkusanat.tex}
 
-\chapter{Johdanto (Ilmari)}
-\label{ch:johdanto_ilmari}
-\input{tex/johdanto_ilmari.tex}
-
-\chapter{Johdanto (Niko)}
-\label{ch:johdanto_niko}
-\input{tex/johdanto_niko.tex}
+\chapter{Johdanto}
+\label{ch:johdanto}
+\input{tex/johdanto.tex}
 
 \chapter{Lämpöpumput sähkön käyttäjinä}
 \label{ch:pumput_sahkon_kayttajina}
