--- a/tex/johdanto.tex
+++ b/tex/johdanto.tex
@@ -1,17 +1,15 @@
-Lämpöpumppujen käyttö kiinteistöjen lämmitykseen kasvattaa suosiotaan. Vuoden 2000 jälkeen on Suomeen asennettu noin 700 000 lämpöpumppua\footnote{Alle \SI{26}{\kilo\watt}}\parencite{kummu}. Lämpöpumppujen kuluttama teho saattaa pienissä muuntopiireissä kasvaa hyvinkin merkittäväksi sen korvatessa vanhoja lämmitysmenetelmiä. Tämä aiheuttaa ongelmia sähkön siirrossa. Lämpöpumppuja, kuten monia muitakin sähköä käyttäviä laitteita, voidaan kuitenkin ohjata. On mahdollista toteuttaa paikallista kysyntäjoustoa ja ohjata lämpöpumppuja pientuotannon tuotantomäärien mukaan.
-
-Lämpöpumppujen kasvanut suosio avaa myös uusia mahdollisuuksia. Suuria määriä lämpöpumppuja voidaan ohjata yhtenä ryhmänä. Ryhmää ohjaamalla voidaan toteuttaa kysyntäjoustoa jopa kansallisella tasolla ja vakauttaa säkövekon taajuutta ja jännitettä. Lämöpumppuryhmiä voidaan käyttää myös virtuaalivoimaloina ja niiden tehokapasiteettia voidaan myydä siitä maksaville\parencite{ShenJiangLi, fischerTriebelSelinger}.
-
-Lämpöpumppuja on mahdollista siis käyttää osana älykästä sähköverkkoa. Lämpöpummpujen ohjaus voidaan mahdollistaa erilaisten rajapintojen kautta. Laitevalmistajien on tarjottava nämä rajapinnat. Rajapintoja voidaan toteuttaa monilla tavoilla ja valmiita teknisiä ratkaisuja on olemassa.
-
 Vuonna 1882 New Yorkissa käynnistettiin Pearl Street Stationin voimalaitos, joka käynnistyessään tuotti sähköä 85 asiakkaalle, ja vuoden päästä käynnistymisestä sillä oli jo 513 asiakasta \parencite{pearlStreetStation}. Tämä voimalaitos loi pohjan keskitetylle energiantuotannolle ja säh-köverkkojen kehitykselle.
 
 Nykyiset sähköverkot ovat pääosin suunniteltu keskitetyn energiantuotannon tarpeisiin, mutta uusiutuvien energialähteiden osuus kasvaa yhteiskunnassa jatkuvasti ja hajautu-neen energiantuotannon lisääntyessä älykkään verkon merkitys kasvaa. Vuodesta 2008 lähtien julkaisujen, joiden abstraktissa, otsikossa tai avainsanoissa mainitaan ”Smart Grid”, määrä on kasvanut huomattavasti Science Direct -julkaisualustalla. \parencite{Tuballa&Abundo}
 
 Electric Power Research Institute (EPRI) määrittelee älykkään sähköverkon siten, että se sisällyttää tieto- ja kommunikaatioteknologiaa sähköntuotannon, -jakelun ja -kulutuksen eri osa-alueisiin. Sen tavoitteena on minimoida ympäristövaikutuksia, parantaa luotettavuutta ja palvelua, vahvistaa markkinoita sekä vähentää kustannuksia ja parantaa tehokkuutta. \parencite{SGdefinition}
 
-Nykyiset älykkäät aurinkosähköinvertterit toimivat osana älykästä sähköverkkoa hyödyntäen esimerkiksi SunSpec Alliancen avointa standardia. Tämä standardi mahdollistaa eri valmistajien tuotteiden käytön samassa kohteessa, kun tiedonvaihto on standardoitua ja siten toimii yhdessä muiden, samaa standardia käyttävien tuotteiden kanssa. Suurista valmistajista esimerkiksi SMA, Yaskawa ja ABB ovat mukana SunSpec Alliancessa, ja standardi on käytössä laajalla tehoskaalalla laitteita, kuluttajapuolen muutamien kilowattien ratkaisuista kaupallisiin, kymmenien kilowattien inverttereihin. \parencite{SSProds}
+Nykyiset älykkäät aurinkosähköinvertterit toimivat osana älykästä sähköverkkoa hyödyntäen esimerkiksi SunSpec Alliancen avointa standardia. Tämä standardi mahdollistaa eri valmistajien tuotteiden käytön samassa kohteessa, kun tiedonvaihto on standardoitua ja siten toimii yhdessä muiden, samaa standardia käyttävien tuotteiden kanssa. Suurista valmistajista esimerkiksi SMA, Yaskawa ja ABB ovat mukana SunSpec Alliancessa, ja standardi on käytössä laajalla tehoskaalalla laitteita, kuluttajapuolen muutamien kilowattien ratkaisuista kaupallisiin sähköntuotantoon tarkoitettuihin, kymmenien kilowattien inverttereihin. \parencite{SSProds}
 
-Tässä työssä tarkastellaan aurinkosähköjärjestelmän komponentteja yleisellä tasolla jär-jestelmän ymmärtämiseksi ja perehdytään järjestelmän kommunikaatiorajapintoihin. Sen lisäksi tarkastellaan rajapintojen hyödyntämismahdollisuuksia eri sidosryhmien nä-kökulmasta. Sidosryhmien osalta työssä käsitellään Suomessa sijaitsevien järjestelmien kannalta relevantteja sidosryhmiä. Työssä ei ole tarkoitus käydä läpi sähköverkon ulko-puolella olevia ”off-grid” -järjestelmiä.
+Lämpöpumppujen käyttö kiinteistöjen lämmitykseen kasvattaa suosiotaan. Vuonna 2019 Suomeen asennettiin noin 98 000 lämpöpumppua\parencite{sulpu}. Lämpöpumppujen kuluttama teho saattaa pienissä muuntopiireissä kasvaa hyvinkin merkittäväksi sen korvatessa vanhoja lämmitysmenetelmiä. Tämä aiheuttaa ongelmia sähkön siirrossa. Lämpöpumppuja, kuten monia muitakin sähköä käyttäviä laitteita, voidaan kuitenkin ohjata älykkään sähköverkon kautta. On esimerkiksi mahdollista toteuttaa paikallista kysyntäjoustoa ja ohjata lämpöpumppuja esimerkiksi aurinkosähkön pientuotannon tuotantomäärien mukaan.
 
-Luvussa 2 kerrotaan aurinkosähköjärjestelmän yleisestä rakenteesta sekä yleisesti käytetyistä komponenteista. Lisäksi luvussa tarkastellaan aurinkosähkön roolia sähkön tuottajana. Luvussa 3 tarkastellaan järjestelmien erilaisia kommunikaatio-rajapintoja, millaista dataa niistä voidaan saada mutta myös, miten niitä voitaisiin hyö-dyntää. Luvussa 4 pohditaan, mitä eri sidosryhmiä aurinkosähköjärjestelmiin liittyy ja mi-ten nämä voivat hyötyä kommunikaatiorajapinnoista. Lopuksi luvussa 5 on työn yhteenveto.
+Lämpöpumppujen kasvanut suosio avaa myös uusia mahdollisuuksia. Suuria määriä lämpöpumppuja voidaan ohjata yhtenä poolina eli ryhmänä. Poolina ohjaamalla voidaan toteuttaa kysyntäjoustoa jopa kansallisella tasolla ja vakauttaa säkövekon taajuutta ja jännitettä. Lämöpumppupooleja voidaan käyttää myös virtuaalivoimaloina ja niiden joustokapasiteettia voidaan myydä siitä maksaville\parencite{ShenJiangLi, fischerTriebelSelinger}.
+
+Lämpöpumppuja ja aurinkosähköinverttereitä on siis mahdollista käyttää osana älykästä sähköverkkoa. Niiden ohjaus tapahtuu erilaisten standardoitujen rajapintojen kautta. Laitevalmistajien on tarjottava nämä rajapinnat. Rajapintoja voidaan hyödyntää monilla tavoilla ja monia valmiita teknisiä ratkaisuja on olemassa.
+
+Tässä työssä tarkastellaan aurinkosähköjärjestelmän ja sähkökäyttöisten lämpöpumppujen komponentteja ja toimintaa yleisellä tasolla järjestelmien ymmärtämiseksi. Tämän jälkeen perehdytään järjestelmien kommunikaatiorajapintoihin, niiden toimintaan ja niitä määrittäviin standardeihin. Lisäksi tarkastellaan rajapintojen hyödyntämismahdollisuuksia eri sovelluksissa ja  eri sidosryhmien näkökulmasta. Sidosryhmien osalta työssä käsitellään Suomessa sijaitsevien järjestelmien kannalta relevantteja sidosryhmiä. Työssä ei ole tarkoitus käydä läpi sähköverkon ulko-puolella olevia ”off-grid” -järjestelmiä.
