--- a/tex/sidosryhmat.tex
+++ b/tex/sidosryhmat.tex
@@ -1,8 +1,9 @@
-Luonnollisesti eri sidosryhmät ovat kiinnostuneet erilaisiin käyttötarkoituksiin soveltuvista rajapinnoista. Osa sidosryhmistä on kiinnostunut vain datan lukemiseen tarkoitetusta rajapinnasta käyttäen sitä esimerkiksi käyttövarmuuden ja tuoton tilastointiin, kun taas osa on kiinnostunut järjestelmän etähallinnasta esimerkiksi verkon joustavuuden parantamiseksi.
+Luonnollisesti eri sidosryhmät ovat kiinnostuneet erilaisiin käyttötarkoituksiin soveltuvista rajapinnoista. Osa sidosryhmistä on kiinnostunut vain datan lukemiseen tarkoitetusta rajapinnasta käyttäen sitä esimerkiksi käyttövarmuuden ja tuoton tilastointiin, kun taas osa on kiinnostunut järjestelmien etähallinnasta esimerkiksi verkon joustavuuden parantamiseksi.
 
 \section{Kantaverkkoyhtiö Fingrid}
   Suomen kantaverkkoyhtiönä Fingrid asettaa vaatimuksia siihen liittyen, mitä rajapintoja järjestelmien on sisällettävä. Se vaatii alle 1MW järjestelmien (voimalaitosten) sisältämään logiikkaportin, jonka kautta saapuvalla käskyllä voimalaitoksen on lopetettava pätötehon tuotanto viiden sekunnin kuluessa. Yli 1MW:n suuruiset järjestelmät tulee taas varustaa väyläliitännällä, jolla voidaan alentaa tuotannon pätötehoa annetun ohjearvon mukaisesti. Tämän liitännän on oltava yhteensopiva IEC60870-6, IEC60870-5 tai IEC61850 -protokollan kanssa. \parencite{VJV2018}
-  Yli 10MW:n järjestelmien kohdalla Fingridin Kantaverkkokeskus voi tarvittaessa pyytää järjestelmän käytöstä vastaavaa toimijaa muuttamaan pätö- tai loistehosäädön asettelu-arvoja voimalaitosteknologian asettamissa rajoissa \parencite{VJV2018}. Fingrid ei täten ota kantaa siihen, miten tämä säätäminen tapahtuu. Fingridin tarpeet järjestelmien rajapinnoista rajoit-tuvat siten erityistilanteissa järjestelmän alasajoon tai sen tehonsäätöön käytöstä vas-taavan toimijan kautta.
+  
+  Yli 10MW:n järjestelmien kohdalla Fingridin Kantaverkkokeskus voi tarvittaessa pyytää järjestelmän käytöstä vastaavaa toimijaa muuttamaan pätö- tai loistehosäädön asettelu-arvoja voimalaitosteknologian asettamissa rajoissa \parencite{VJV2018}. Fingrid ei täten ota kantaa siihen, miten tämä säätäminen tapahtuu. Fingridin tarpeet järjestelmien rajapinnoista rajoittuvat siten erityistilanteissa järjestelmän alasajoon tai sen tehonsäätöön käytöstä vastaavan toimijan kautta.
 
 \section{Verkonhaltija}
   \begin{itemize}
@@ -10,9 +11,11 @@ Luonnollisesti eri sidosryhmät ovat kiinnostuneet erilaisiin käyttötarkoituks
     \item häiriötilanteissa järjestelmän hallinta
   \end{itemize}
 
-  Yksi lämpöpumppujen rajapintoihin liittyvistä sidosryhmistä on sähköverkonhaltija eli Suomessa käytännössä sähköverkkoyhtiö. Vuodesta 2009 on Suomessa laki velvoittanut sähköverkkoyhtiöitä asentamaan sähkönkäyttöpaikoille eli sähköä ostavan asiakkaan verkkoliityntään tuntimittauslaitteiston. Asetus myös asettaa vaatimuksia käytetyllä tuntimittauslaittestolle muunmuassa etäluettavuudesta ja -ohjattavuudesta.\parencite{mittariAsetus} Tuntimittauslaitteistosta käytetään usein termiä älymittari tai AMR-mittari. Termi AMR:n viitatessa lähinnä mittarin automaattiseen luentaan, saattaisi parempi nimitys olla AMI-mittari. Lyhenne AMR tarkoittaa mittareiden muodostamaa järjestelmää, jossa tieto liikkuu myös kohti mittareita ja niiden takana olevia kotitalouksia.\parencite{dictOfEnergy}
+  Yksi järjestelmien rajapintoihin liittyvistä sidosryhmistä on sähköverkonhaltija eli Suomessa sähköverkkoyhtiö. Vuodesta 2009 on Suomessa laki velvoittanut sähköverkkoyhtiöitä asentamaan sähkönkäyttöpaikoille eli sähköä ostavan asiakkaan verkkoliityntään tuntimittauslaitteiston. Asetus myös asettaa vaatimuksia käytetyllä tuntimittauslaittestolle muun muassa etäluettavuudesta ja -ohjattavuudesta.\parencite{mittariAsetus} Tuntimittauslaitteistosta käytetään usein termiä älymittari tai AMR-mittari. Termin AMR:n viitatessa lähinnä mittarin automaattiseen luentaan, saattaisi parempi nimitys olla AMI-mittari. Lyhenne AMI tarkoittaa mittareiden muodostamaa järjestelmää, jossa tieto liikkuu myös kohti mittareita ja niiden takana olevia kiinteistöjä.\parencite{dictOfEnergy}
 
-  Lämpöpumput ovat todennäköisesti verkkoliityntänsä suurimpia kuormia, jonka takia niiden käyttämän sähkön hintaan kohdistuu paineita. Saksalaisessa EVU-Sparre-järjestelmässä lämpöpumppu on sähköntoimittajan ohjattavissa. Kuluttajan saama poiskytkennästä johtuva energiahinnanalennus koskee ainoastaan lämpöpumpun käyttämää sähköä. Tämä tarkoittaa, että energiamittari, jonka kautta myös lämpöpumpun ohjaaminen tapahtuu, mittaa erikseen lämpöpumpun käyttämän energian.\parencite{enwg, VDEARN4100}
+  AMI-mittaria voidaan hyödyntää kysyntäjoustossa, kun verkonhaltija pystyy ohjaamaan lämpöpumpun toimintaa mittarin tarjoaman kuormanohjausreleen kautta. Aurinkosähköinvertterin ohjaukseen tämä ei kuitenkaan suoraan sovellu, sillä inverttereiden ohjaus tapahtuu usein monimutkaisemmalla kommunikaatiolla, kuin mihin mittarit tällä hetkellä kykenevät. Keskeinen syy mittarien yksinkertaiseen ohjaustekniikkaan on standardien ja määrittelyiden puute, mikä ei nopeasti muutu sillä keskitettyjen ratkaisujen kehitys vaatii aikaa.
+
+  Lämpöpumput ovat todennäköisesti verkkoliityntänsä suurimpia kuormia, jonka takia niiden käyttämän sähkön hintaan kohdistuu paineita. Saksalaisessa EVU-Sparre-järjestelmässä lämpöpumppu on sähköntoimittajan ohjattavissa. Korvauksena kuormanohjauksesta kuluttaja saa hinnanalennusta käytetystä energiasta, tosin kuluttajan saama energiahinnanalennus koskee ainoastaan lämpöpumpun käyttämää sähköä. Tämä tarkoittaa, että energiamittari, jonka kautta myös lämpöpumpun ohjaaminen tapahtuu, mittaa erikseen lämpöpumpun käyttämän energian.\parencite{enwg, VDEARN4100}
 
 \section{Järjestelmän omistaja}
   \begin{itemize}
@@ -20,9 +23,9 @@ Luonnollisesti eri sidosryhmät ovat kiinnostuneet erilaisiin käyttötarkoituks
     \item muiden järjestelmien integraatio
   \end{itemize}
 
-  Järjestelmän omistajan eli usein käyttäjän suorittama lämpöpumpun monitorointi voidaan toteuttaa eri tavoilla. Hieman edistyneempi käyttäjä saattaa rakentaa lämpöpumppunsa tarjoamiin rajapintoihin liittyvää kotiautomaatioa ja monitorointia. Usein kuitenkin monitorointi ja ohjaus tapahtuu laitevalmistajan tarjoaman mobiili- tai verkkosovelluksen avulla. Sovellukset toteutetaan todennäköisesti pilvipalveluna.
+  Järjestelmän omistajan eli usein käyttäjän suorittama järjestelmän monitorointi voidaan toteuttaa muutamilla eri tavoilla. Järjestelmän toiminnasta kiinnostuneempi käyttäjä saattaa rakentaa sen rajapintoja hyödyntävää kotiautomaatioa ja monitorointia. Monitorointi ja ohjaus toteutetaan usein fyysisen käyttöliittymän avulla ja mikäli nämä toiminnallisuudet halutaan myös etänä, on käyttöliittymä helposti tuotavissa laitevalmistajan tarjoamaan pilvipalveluun tai mobiilisovellukseen.
 
-  Integroimalla lämpöpumppu ja aurinkosähköinvertteri taloautomaatioon saavutetaan hyötyjä. Automaation avulla lämpöpumpun käyntijaksojen aiheuttamia tehopiikkejä voidaan kompensoida aurinkosähköinvertterin avulla ja näin vähentää sähkö siirron kustannuksia ja parantaa jännitteen laatua heikoissa sähköverkoissa.
+  Integroimalla lämpöpumppu ja aurinkosähköinvertteri taloautomaatioon saavutetaan hyötyjä. Automaation avulla lämpöpumpun käyntijaksojen aiheuttamia tehopiikkejä voidaan kompensoida aurinkosähköinvertterin avulla ja näin vähentää sähkönsiirron kustannuksia sekä parantaa jännitteen laatua heikoissa sähköverkoissa.
 
 \section{Järjestelmätoimittaja}
   \begin{itemize}
@@ -32,8 +35,8 @@ Luonnollisesti eri sidosryhmät ovat kiinnostuneet erilaisiin käyttötarkoituks
     \item huoltopalveluiden tarjoaminen monitorointia hyödyntämällä
   \end{itemize}
 
-  Lämpöpumpujärjestelmän toimittaja voi hyödyntää lämpöpumpun rajapintoja huoltopalveluiden tarjontaan ja dianostiikkaan. Seuraamalla pumpun toimintaa toimittaja voi ennustaa ja tilata tarvittavia huoltoja tai korjauksia, jolloin järjestelmän käyttövarmuus paranee. Toimintatapa tuo lisäarvoa ja säästöjä. Esimerkiksi kuluttajan ei tarvitse käyttää aikaa vikojen selvittämiseen tai huoltojen tilaamiseen. Vastaavasti toimittajan/huoltoyrityksen turhat vierailut vähenevät, kun järjestelmän virhetulanteita voidaan selvittää ja nollata etähallintaa hyödyntäen. Toimittajan suorittamaa diagnostiikkaa voidaan käyttää myös tuotekehityksen apuna tai luotaessa parempia ennustemalleja sähkön kulutuksesta.
+  Lämpöpumppujärjestelmän tai aurinkosähköjärjestelmän toimittaja voi hyödyntää lämpöpumpun rajapintoja huoltopalveluiden tarjontaan ja dianostiikkaan. Seuraamalla järjestelmän toimintaa toimittaja voi ennustaa ja tilata tarvittavia huoltoja tai korjauksia, jolloin järjestelmän käyttövarmuus paranee. Tämä tuo käyttäjälle lisäarvoa ja säästöjä sekä huolettomuutta, toimittaja taas voi myydä tämän lisäpalveluna asiakkaalle. Esimerkiksi kuluttajan ei tarvitse käyttää aikaa vikojen selvittämiseen tai huoltojen tilaamiseen. Vastaavasti toimittajan/huoltoyrityksen turhat vierailut vähenevät, kun järjestelmän virhetilanteita voidaan selvittää ja nollata etähallintaa hyödyntäen. Toimittajan suorittamaa diagnostiikkaa voidaan käyttää myös tuotekehityksen apuna tai luotaessa parempia ennustemalleja sähkön kulutuksesta.
 
 \section{Aggregaattori}
 
-  Vanhastaan sähkömarkkinoilla on ollut käytännössä kolme toimijaa: Energian myyjä, siirtäjä ja ostaja. Aggregaattori näistä kaikista (mahdollisesti) erillinen toimja, jonka tehtävänä on myydä sähkömarkkinoille joustoa. Aggregaattori voi ohjata esimerkiksi lämpöpumppupoolia ja käydä kauppaa sen mahdollistamalla kysyntäjoustolla.
+  Ennestään sähkömarkkinoilla on ollut käytännössä kolme toimijaa: Energian myyjä, siirtäjä ja ostaja. Aggregaattori näistä kaikista (mahdollisesti) erillinen toimja, jonka tehtävänä on myydä sähkömarkkinoille joustoa. Aggregaattori voi ohjata esimerkiksi lämpöpumppupoolia ja käydä kauppaa sen mahdollistamalla kysyntäjoustolla.
