--- a/tex/yhteenveto.tex
+++ b/tex/yhteenveto.tex
@@ -1,1 +1,7 @@
 Lämpöpumppujen merkitys sähkoverkossa kasvaa niiden tullessa yhä suositummiksi ja niiden korvatessa muita lämmitys- ja viilennysmuotoja. Lämpöpumppujen lisääntyminen ja esimerikiksi suorasta sähkölämmityksestä eroava käytttäytyminen vaikuttavat sähköverkkoon. Lämpöpumppujen tekniikka kehittyy ja nykyisin kotitalouskäyttöön myytävissä pumpuissa on yleensä suoraan verkkoon kytketyn oikosulkumoottorin tilalla taajuusmuuttajakäyttöinen oikosulkumoottori. Tämä kehitys myös osaltaan märittelee miten verkkoon liitettyjen lämpöpumppujen määrän kasvu vaikuttaa sähköverkkoon. Ilman taajuusmuuttajaa tai pehmokäynistintä verkkoon kytketyt lämpöpumput ottavat käynnistyessään verkosta suuria hetkellisiä tehoja, mikä saattaa jännitejäykkyydeltään huonossa verkossa aiheuttaa hetkellisiä jännitteenalenemia. Lämöpumpun ollessa taajuusmuuttajakäyttöinen, ei se aiheuta edellämainittuja tehonkulutuksen piikkejä. Kuitenkin mikäli lämpöpupulla korvataan jokin muu lämmitysmuoto, kuin suora sähkölämmitys, kasvattaa se kulutuspaikan energiankulutusta. Mikäli muuntopiirissä moni talous vaihtaa lämmitysmuodokseen lämpöpumpun, saattaa se aiheuttaa tarpeen sähöverkon jännitejäykkyyden parantamiselle.
+
+Järjestelmien aiheuttamia haasteita voidaan ratkaista ja löytää uusia niitä hyödyntäviä sovelluksia kun kommunikointi niiden kanssa onnistuu. Kommunikointi mahdollistetaan standardoiduilla kommunikointirajapinnoilla, joiden kautta järjestelmiä voidaan ohjata joko yksittäin tai osana suurempaa poolia.
+
+Yksi suosituimmista järjestelmien ohjauksen mahdollistavista tekniikoista perustuu Modbus-standardiin. Standardi määrittelee fyysisen tason rajapinnat mahdolistaen ohjauksen joko sarjaliitäntää tai ethernet-liitäntää käyttäen, mikä mahdollistaa protokollan käyttämisen paikallisesti tai internetin yli toimivien etäyhteyksien välityksellä. Modbus-standardin määritellessä kommuikointia vain hyvin matalalla tasolla on sitä helppo soveltaa erilaisiin sovelluksiin ja sen päälle voidaan rakentaa korkeamman tason viestintä- ja ohjausprotokollia.
+
+Yksi niistä on SunSpec...
