--- a/tex/yhteenveto.tex
+++ b/tex/yhteenveto.tex
@@ -2,6 +2,8 @@ Lämpöpumppujen merkitys sähkoverkossa kasvaa niiden tullessa yhä suositummik
 
 Järjestelmien aiheuttamia haasteita voidaan ratkaista ja löytää uusia niitä hyödyntäviä sovelluksia kun kommunikointi niiden kanssa onnistuu. Kommunikointi mahdollistetaan standardoiduilla kommunikointirajapinnoilla, joiden kautta järjestelmiä voidaan ohjata joko yksittäin tai osana suurempaa poolia.
 
-Yksi suosituimmista järjestelmien ohjauksen mahdollistavista tekniikoista perustuu Modbus-standardiin. Standardi määrittelee fyysisen tason rajapinnat mahdolistaen ohjauksen joko sarjaliitäntää tai ethernet-liitäntää käyttäen, mikä mahdollistaa protokollan käyttämisen paikallisesti tai internetin yli toimivien etäyhteyksien välityksellä. Modbus-standardin määritellessä kommuikointia vain hyvin matalalla tasolla on sitä helppo soveltaa erilaisiin sovelluksiin ja sen päälle voidaan rakentaa korkeamman tason viestintä- ja ohjausprotokollia.
+Yksi suosituimmista järjestelmien ohjauksen mahdollistavista tekniikoista perustuu Modbus-standardiin. Standardi määrittelee fyysisen tason rajapinnat mahdolistaen ohjauksen joko sarjaliitäntää tai ethernet-liitäntää käyttäen, mikä mahdollistaa protokollan käyttämisen paikallisesti tai internetin yli toimivien etäyhteyksien välityksellä. Modbus-standardin määritellessä kommuikointia vain hyvin matalalla tasolla on sitä helppo soveltaa erilaisiin sovelluksiin ja sen päälle voidaan rakentaa korkeamman tason viestintä- ja ohjausprotokollia. Modbuin päälle voidaan myöskin toteuttaa yksittäisen laitteen ohjaukseen ja monitorointiin tarvittavat sovellukset tai liittäminen kotiautomaatioon osaksi älykästä kotia. Myöskin erilaiset monitorointi- ja etäohjaussovellukset, niin omistajan kuin järjestelmä- tai palvelutoimittajan tarpeisiin toteutaan yleensä modbusin avulla.
 
 Yksi niistä on SunSpec...
+
+Lämpöpumppujen kohdalla korkeamman tason rajapintoja kuten SG-Ready-ohjausrajapintaa tai Saksalaista EVU-Sperre-ohjausrajapintaa käyttävät sovellukset taas keskittyvät yhden lämpöpumpun sijasta useamman pumpun muodostamaan pooliin. Lämpöpumpupoolin ohjaamista voidaan käyttää erilaisiin sovelluksiin kuten huipputehon rajoittamiseen verkossa tai sähköntuotannon ja -kulutuksen tasapainottamiseen. Aggregaattorin hallinnoimaa lämpöpumppupoolia voidaan käyttää esimerkiksi kysyntäjouston tehokkaaseen toteuttamiseen. Aggregaattorille lämpöpumpupoolin ohjaaminen taas on tuottoa tavoittelevaa liiketoimintaa, jolla se osallistuu sähkömarkkinoille.
