--- a/tex/sanasto.tex
+++ b/tex/sanasto.tex
@@ -107,3 +107,13 @@
   name={SCADA},
   description={Supervisory control and data acquisition}
 }
+
+\newglossaryentry{AMR}{
+  name={AMR},
+  description={Automatic meter reading}
+}
+
+\newglossaryentry{AMI}{
+  name={AMI},
+  description={Advanced Metering Infrastructure}
+}
