Added references to .bib

--- a/tex/rajapinnat.tex
+++ b/tex/rajapinnat.tex
@@ -131,7 +131,7 @@
   SunSpec Modbusin määrittelemä \gls{CIM} on käytössä myös muilla protokollilla, kuten \gls{HTTP}/\gls{XML}:lla ja \gls{OPC}:lla. Koska lähes kaikki tieto SunSpecin standardista perustuu Modbus-protokollaan, muiden tiedonsiirtoprotokollien tarkastelu jätettiin pois. Tiedon puute johtuu mitä luultavimmin Modbusin suuresta suosiosta.
 
 \section{IEC 61850}
-  \gls{IEC} 61850 on sähköaseman älykkäiden sähkölaitteiden kommunikaatioprotokollia määrittävä standardi. Se on laajasti käytössä sähköasemien tiedonvaihdossa ja sähkönjakelun automaatiossa. Sen laajennukset tähtäävät kuitenkin myös laajempaan käyttöön, sillä standardissa on määritelty myös esimerkiksi hajautetun energiantuotannon ja sähköisen liikkumisen tietomalleja. Edellä mainitun SunSpecin CIM on tehty 61850-90-7 -dokumentin pohjalta, ja se toteuttaakin suuren osan IEC standardin määrittelemistä inverttereiden toiminnallisuuksista. Näitä toiminnallisuuksia ovat esimerkiksi:
+  \gls{IEC} 61850 on sähköaseman älykkäiden sähkölaitteiden kommunikaatioprotokollia määrittävä standardi. Se on laajasti käytössä sähköasemien tiedonvaihdossa ja sähkönjakelun automaatiossa. Sen laajennukset tähtäävät kuitenkin myös laajempaan käyttöön, sillä standardissa on määritelty myös esimerkiksi hajautetun energiantuotannon tietomalleja. Edellä mainitun SunSpecin CIM on tehty 61850-90-7 -dokumentin pohjalta, ja se toteuttaakin suuren osan IEC standardin määrittelemistä inverttereiden toiminnallisuuksista. Näitä toiminnallisuuksia ovat esimerkiksi:
   \begin{itemize}
     \item Välittömät ohjaustoiminnot, esimerkiksi alasajo- ja käynnistyskomennot
     \item Loistehonsäädön (Volt/VAR-säätö) tilan muuttaminen
