--- a/tex/niko_references.bib
+++ b/tex/niko_references.bib
@@ -85,7 +85,7 @@
 @misc{SSProds,
 	title={SUNSPEC MODBUS CERTIFIED PRODUCTS},
 	url={https://sunspec.org/sunspec-modbus-certified-products/},
-  urldate={2020-03-24}
+  	urldate={2020-03-24}
 }
 @misc{SSFactSheet,
   author       = {SunSpec Alliance},
@@ -118,3 +118,49 @@
   pages = {710-725},
   publisher = {Elsevier BV},
 }
+@misc{IEEE1815.1,
+	series = {IEEE Standard for Exchanging Information Between Networks Implementing IEC 61850 and IEEE Std 1815(TM) [Distributed Network Protocol (DNP3)]},
+	title = {IEEE Standard for Exchanging Information Between Networks Implementing IEC 61850 and IEEE Std 1815(TM) [Distributed Network Protocol (DNP3)]},
+	year = {2016},
+	copyright = {2016 IEEE},
+	isbn = {9781504405980},
+	keywords = {Automation ; Substations ; mapping ; upgrade ; power system ; feeder ; IEEE Standards ; utility ; evolution ; DNP3 ; network ; communications ; Power distribution ; substation ; NIST ; IEEE 1815(TM) ; Power system reliability ; IEC Standards ; gateway ; IEC 61850},
+	language = {eng},
+	pages = {1-358},
+	publisher = {IEEE},
+}
+
+@INPROCEEDINGS{DNP3Inv,
+  author={K. {Prabakar} and A. {Singh} and C. {Tombari}},
+  booktitle={2019 IEEE 46th Photovoltaic Specialists Conference (PVSC)}, 
+  title={IEEE 1547-2018 Based Interoperable PV Inverter with Advanced Grid-Support Functions}, 
+  year={2019},
+  volume={},
+  number={},
+  pages={2072-2077},
+}
+
+@misc{DNP3AppNote,
+  author       = {SunSpec Alliance},
+  title        = {NEW STANDARD COMMUNICATION MODEL ENABLES GRID OPERATORS TO ENHANCE PERFORMANCE, VALUE OF DISTRIBUTED ENERGY RESOURCES},
+  url          = {https://sunspec.org/new-standard-communication-model-enables-grid-operators-enhance-performance-value-distributed-energy-resources/},
+  urldate      = {2020-08-20},
+  date		   = {2019-01-14},
+}
+
+@inproceedings{iec61850func,
+	author = {Strasser, Thomas and Pröstl Andrén, Filip and Bründlinger, Roland and Garabandic, Djordje},
+	year = {2013},
+	month = {10},
+	pages = {},
+	title = {Integrating PV into the Smart Grid – Implementation of an IEC 61850 Interface for Large Scale PV Inverters}
+}
+
+@manual{SMAManual,
+  title        = {Käyttöohje - SUNNY TRIPOWER 3.0 / 4.0 / 5.0 / 6.0},
+  author       = {SMA},
+  date 		   = {2019-12-19},
+  url          = {https://files.sma.de/downloads/STP3-6-3AV-40-BE-fi-14.pdf},
+}
+
+
